2011-08-21 Szymon Janc <szymon@janc.net.pl>

	* acinclude.m4: Use AC_LANG_PROGRAM macro to generate source code for
	 AC_LANG_CONFTEST macros.

2011-08-20  Szymon Janc <szymon@janc.net.pl>

	Add grub-fstest option to uncompress data for commands.

	* util/grub-fstest.c (uncompress): New var.
	(options): New option -u.

2011-08-20  Szymon Janc <szymon@janc.net.pl>

	* grub-core/loader/i386/linux.c (grub_linux_setup_video): Add
	GRUB_VIDEO_DRIVER_RADEON_FULOONG2E to switch case statement.

2011-08-20  Szymon Janc <szymon@janc.net.pl>

	* grub-core/io/gzio.c (grub_gzio_open): Always return original io if
	file type was not recognized correctly (not gzip or corrupted).

2011-08-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/mips/loongson/init.c (grub_reboot): Reboot Fuloong.
	* include/grub/cs5536.h (GRUB_CS5536_MSR_DIVIL_RESET): New definition.

2011-08-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/Makefile.core.def (kernel): Add video/radeon_fuloong2e.c on
	loongson.
	* grub-core/kern/mips/loongson/init.c (grub_machine_init): Init
	video_radeon_fuloong2e.
	* grub-core/video/radeon_fuloong2e.c: New file.
	* include/grub/video.h (grub_video_id_t): Add new ID
	GRUB_VIDEO_DRIVER_RADEON_FULOONG2E.

2011-08-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/mips/loongson.h (GRUB_CPU_LOONGSON_COP0_PRID): New
	define.
	* grub-core/kern/mips/loongson/init.c (grub_machine_init): Check
	that PRID matches the detected subplatform and reset the subplatform
	if it doesn't.

2011-08-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/misc.c (grub_vprintf): Fix a bug on malloc failure.

2011-08-19  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix PCI iterating on functions >= 4.

	* grub-core/bus/pci.c (grub_pci_iterate): Remove useless ghost skipping.
	* include/grub/mips/loongson/pci.h (GRUB_LOONGSON_OHCI_GHOST_FUNCTION):
	Removed.
	(GRUB_LOONGSON_EHCI_GHOST_FUNCTION): Likewise.
	(grub_pci_read): Fix bitmask.