@@ -1,3 +1,7 @@
+2011-08-23  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* util/grub-install.in: Move cryptodisk logic to appropriate place.
+
 2011-08-21 Szymon Janc <szymon@janc.net.pl>
 
 	* acinclude.m4: Use AC_LANG_PROGRAM macro to generate source code for
